deploy/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-srv
  labels:
    app: api-srv
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api-srv
  template:
    metadata:
      labels:
        app: api-srv
    spec:
      containers:
      - name: api-srv
        image: api-srv
        ports:
        - name: rest
          containerPort: 8000
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 5
