deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-srv
spec:
  type: LoadBalancer
  selector:
    app: api-srv
  ports:
    - name: rest
      port: 8051
      targetPort: 8000
